codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_follows_resized_tail.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"line16                                  "
"                                        "
"line17                                  "
"                                        "
"line18                                  "
"                                        "
"line19                                  "
"                                        "
"tail                                    "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q close                                "
"                                        "
